# AutoXAI4Omics

./: .coveragerc  .dockerignore  .ge_preprocessing.sh.swp  .gitignore  .pre-commit-config.yaml  .secrets.baseline  .travis.yml  .whitesource  AoT_gene_expression_pre_processing.py  CHANGELOG.md  CONTRIBUTING.md  DEV_MANUAL.md  Dockerfile  Dockerfile.gpu  LICENSE  MANUAL.md  Makefile  README.md  Run_LO.R  Run_TMM.R  Run_others.R  Windows_installation_instruction.docx  _version.py  auto_omics.sh  autoxai4omics.sh  build.sh  common.sh  common_old.sh  custom_model.py  data_processing.py  ge_preprocessing.sh  gene_exp_regression.json  install_Python_packages.sh  install_R_packages.sh  logging.yml  microbiome_binary_class.json  microbiome_osx.yml  model_params.py  models.py  omixai.sh  (+21 more)
.github/ISSUE_TEMPLATE/: bug_report.md
autoxai4omics/: logging.yml  mode_config_duplicate.py
autoxai4omics/metrics/: metric_defs.py  metrics.py
autoxai4omics/metrics/tests/: test_metric_defs.py
autoxai4omics/models/: model_params.py  models.py
autoxai4omics/omics/: microbiome.py
autoxai4omics/plotting/: plot_utils.py  plots_both.py  plots_clf.py  plots_reg.py
autoxai4omics/utils/: load.py  save.py  vars.py
cicd_scripts/: build_docker_images.sh  push_image_to_cr.sh
configs/: CONFIG_MANUAL.md  L1000_exp.json  L1000_exp_auto.json  L1000_exp_oldversion.json  L1000_exp_rf_only.json  L1000_exp_v1.json  L1000_gene_expression.json  L1000_gene_expression_preprocessing.json  L1000_gene_expression_preprocessing_auto.json  MANUAL.md  ORIGINAL_microbiome_diet_final.json  configNotes.md  metabolome_drought.json  metabolome_drought2.json  metabolome_drought_auto.json  microbiome_age.json  microbiome_diet.json  microbiome_diet_final.json  microbiome_diet_final2.json  microbiome_diet_final_holdout.json  microbiome_gut_age.json
configs/examples/: 50k_barley_SHAP.json  L1000_gene_expression_preprocessing_auto.json  configNotes.md  metabolome_drought_auto.json  microbiome_age.json  microbiome_diet_final.json  microbiome_diet_final_holdout.json
configs/old_format/: L1000_gene_expression_preprocessing_auto.json  microbiome_age.json  microbiome_diet_final.json  microbiome_diet_final_holdout.json
configs/work-in-progress/: metabolome_drought_auto.json  microbiome_age.json
data/: Pre-process_GE_L1000_discrete_drug_perturbation_blood_urea_nitrogen.csv  diet_prromenade_Features_X_Samples.csv  diet_prromenade_Features_X_Samples_original.csv  diet_prromenade_Metadata.csv  diet_prromenade_Metadata_original.csv  diet_prromenade_Readme.txt  metabolites_drought_Readme.txt  metabolites_drought_metadata.csv  metadata_L1000.csv  processed_gene_expression_L1000_drug_perturbation_blood_urea_nitrogen.csv  row_type_BRIDGE_pheno_50k_metadata_w.hetero.csv
omics/: AoT_gene_expression_pre_processing.py  R_replacement.py  geneExp.py  metabolomic.py  microbiome.py  tabular.py
omics/rscripts/: Run_LO.R  Run_TMM.R
src/: data_processing.py  feature_selection.py  logging.yml  mode_config_duplicate.py  mode_feature_selection.py  mode_plotting.py  mode_predict.py  mode_testing_holdout.py  mode_train_models.py  models.py  parsers.py  plotting.py  predict.py  structure.md  testing_holdout.py  train_models.py  utils.py
src/metrics/: metric_defs.py  metrics.py
src/models/: custom_model.py  model_defs.py  model_params.py  models.py
src/omics/: R_replacement.py  geneExp.py  metabolomic.py  microbiome.py  tabular.py
src/plotting/: plot_utils.py  plots.py  plots_both.py  plots_clf.py  plots_reg.py
src/tabauto/: base_model.py
src/utils/: data_processing.py  load.py  parsers.py  save.py  utils.py  vars.py
tabauto/: __init__.py  autogluon_model.py  batch_generator_seq_array.py  keras_model.py  lgbm_model.py  sklearn_model.py  xgboost_model.py
tests/: conftest.py  test_data_processing.py  test_modes.py  test_scripts.py
tests/result_sets/: best_model_names.yml  classification_results.csv  multi_results.csv  regression_results.csv
(+66 files in other folders)
