[project]
name = "autoxai4omics"
version = "1.1.1"
description = ""
authors = [
    {name = "IMB Research UK HCLS",email = "James.Strudwick@ibm.com"}
]
license = {text = "AL2"}
readme = "README.md"
package-mode = false
requires-python = ">=3.9,<3.12"
dependencies = [
    "autokeras (==1.0.20)",
    "bioinfokit (==2.1.0)",
    "biom-format (==2.1.12)",
    "conorm (==1.2.0)",
    "cython (==0.29.32)",
    "docrep (==0.3.2)",
    "eli5 (==0.16.0)",
    "emcee (==3.1.3)",
    "calour @ git+https://github.com/biocore/calour.git@2020.8.6",
    "imblearn (==0.0)",
    "keras-tuner (==1.1.3)",
    "lightgbm (==3.3.5)",
    "matplotlib (==3.6.1)",
    "optuna (==3.6)",
    "pandas (==1.5.0)",
    "pydantic (==2.7.0)",
    "scikit-learn (==1.6.1)",
    "scikit-optimize (==0.9.0)",
    "seaborn (==0.10.0)",
    "shap (==0.47.2)",
    "statsmodels (==0.13.2)",
    "xgboost (==2.1.4)",
    "tensorflow (==2.14.0)",
    "scipy (==1.10.0)",
    "numpy (==1.23.5)",
    "keras (==2.14.0)",
    "h5py (==3.9.0)",
    "tensorflow-macos (==2.14.0) ; sys_platform == \"darwin\"",
    "tensorflow-cpu-aws (==2.14.0) ; sys_platform == \"linux\"",
    "protobuf (<3.21) ; sys_platform == \"linux\""
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.1,<9.0"
pytest-cov = ">=5.0,<6.0"
pip-licenses = ">=4.4,<5.0"
pipdeptree = ">=2.18,<3.0"
jupyter = "^1.1.1"

